Added campaign and company, added webform for campaign

--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -2,3 +2,4 @@ title=Welcome from Messages.Properties
 heading=Hello :: GroupDeal Clone
 greeting=GroupDeal is underway
 newdeal.heading=New Deal Input
+validation.required=Field is required
