Added validation and changed java.sql.Date to java.util.Date

--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -2,4 +2,10 @@ title=Welcome from Messages.Properties
 heading=Hello :: GroupDeal Clone
 greeting=GroupDeal is underway
 newdeal.heading=New Deal Input
+
+##Errors validation. are custom validator messages
 validation.required=Field is required
+validation.notbefore.startdate=Must be before start date
+typeMismatch=Invalid Input
+typeMismatch.startDate=Invalid Input: Format(DD-MM-YYYY)
+typeMismatch.endDate=Invalid Input: Format(DD-MM-YYYY)
