Better way to set invalid format on dates

--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -7,5 +7,4 @@ newdeal.heading=New Deal Input
 validation.required=Field is required
 validation.notbefore.startdate=Must be before start date
 typeMismatch=Invalid Input
-typeMismatch.startDate=Invalid Input: Format(DD-MM-YYYY)
-typeMismatch.endDate=Invalid Input: Format(DD-MM-YYYY)
+typeMismatch.java.util.Date=Invalid Input: Format(DD-MM-YYYY)
