Changed layout so that all titles come from the messages.properties file

--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -2,6 +2,7 @@ title=Welcome from Messages.Properties
 heading=Hello :: GroupDeal Clone
 greeting=GroupDeal is underway
 newdeal.heading=New Deal Input
+edit.campaign.title=Edit a campaign
 
 ##Errors validation. are custom validator messages
 validation.required=Field is required
