Made Deal RESTful as an example

--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -1,8 +1,11 @@
 title=Welcome from Messages.Properties
 heading=Hello :: GroupDeal Clone
 greeting=GroupDeal is underway
-newdeal.heading=New Deal Input
-edit.campaign.title=Edit a campaign
+newdeal.title=New Deal Input
+editcampaign.title=Edit a campaign
+home.title=Welcome to Group Deal Clone
+newcampaign.title=Input New Campaign
+updatedcampaign.title=Campaign Updated / Added
 
 ##Errors validation. are custom validator messages
 validation.required=Field is required
