Added company DAO, Controller & Service. Some JSP work

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,25 @@
-title=Welcome from Messages.Properties
-heading=Hello :: GroupDeal Clone
-greeting=GroupDeal is underway
-newdeal.title=New Deal Input
-editcampaign.title=Edit a campaign
-home.title=Welcome to Group Deal Clone
-newcampaign.title=Input New Campaign
-updatedcampaign.title=Campaign Updated / Added
+Title=Welcome from Messages.Properties
+Heading=Hello :: GroupDeal Clone
+Greeting=GroupDeal is underway
+Home.Title=Welcome to Group Deal Clone
+
+#Deal
+New.Deal.Title=New Deal Input
+
+#campaign
+New.Campaign.Title=Input New Campaign
+Edit.Campaign.Title=Edit a campaign
+Updated.Campaign.Title=Campaign Updated / Added
+
+#company
+New.Company.Title=Input New Campaign
+Edit.Comapny.Title=Edit a campaign
+Updated.Company.Title=Campaign Updated / Added
+
+#city
+New.City.Title=Input New Campaign
+Edit.City.Title=Edit a campaign
+Updated.City.Title=Campaign Updated / Added
 
 ##Errors validation. are custom validator messages
 validation.required=Field is required
