some style work to the front-end. added check for logged in or not.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,14 +12,19 @@ Edit.Campaign.Title=Edit a campaign
 Updated.Campaign.Title=Campaign Updated / Added
 
 #company
-New.Company.Title=Input New Campaign
-Edit.Comapny.Title=Edit a campaign
-Updated.Company.Title=Campaign Updated / Added
+New.Company.Title=Input New Company
+Edit.Comapny.Title=Edit a company
+Updated.Company.Title=Company Updated / Added
 
 #city
-New.City.Title=Input New Campaign
-Edit.City.Title=Edit a campaign
-Updated.City.Title=Campaign Updated / Added
+New.City.Title=Input New City
+Edit.City.Title=Edit a city
+Updated.City.Title=City Updated / Added
+
+#category
+New.Category.Title=Input New Category
+Edit.Category.Title=Edit a category
+Updated.Category.Title=Category Updated / Added
 
 ##Errors validation. are custom validator messages
 validation.required=Field is required
