update of readme

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Test
+TODO
+====
+- Style product listing layout on front-page.
+- Payment processing engine.
+- Search and list products in the backend for edit / delete.
+- Subscribe to new deals
+- Link to unsubscribe.
